--- a/e2e/bitrise.yml
+++ b/e2e/bitrise.yml
@@ -1,49 +1,28 @@
 format_version: "11"
 default_step_lib_source: https://github.com/bitrise-io/bitrise-steplib.git
 
+app:
+  envs:
+  - EXPO_PERSONAL_ACCESS_TOKEN: $EXPO_PERSONAL_ACCESS_TOKEN
+  - SAMPLE_APP_URL: https://github.com/godrei/expo-sample-managed.git
+  - SAMPLE_APP_BRANCH: main
+
 workflows:
-  test_managed_workflow:
-    envs:
-    - SAMPLE_APP_URL: https://github.com/godrei/expo-sample-managed.git
-    - SAMPLE_APP_BRANCH: main
-    # Define these in your .bitrise.secrets.yml
-    - EXPO_PERSONAL_ACCESS_TOKEN: $EXPO_PERSONAL_ACCESS_TOKEN
+  test_android:
+    before_run:
+    - _clone_sample_project
     steps:
-    - script:
-        inputs:
-        - content: |-
-            #!/bin/env bash
-            set -ex
-            rm -rf ./_tmp
-    - git::https://github.com/bitrise-steplib/bitrise-step-simple-git-clone.git:
-        inputs:
-        - repository_url: $SAMPLE_APP_URL
-        - branch: $SAMPLE_APP_BRANCH
-        - clone_into_dir: ./_tmp
     - path::./:
         inputs:
         - access_token: $EXPO_PERSONAL_ACCESS_TOKEN
         - platform: android
         - work_dir: ./_tmp
+        - eas_options: --profile=production
 
-  test_withouth_eas_config_file:
-    envs:
-    - SAMPLE_APP_URL: https://github.com/godrei/expo-sample-managed.git
-    - SAMPLE_APP_BRANCH: main
-    # Define these in your .bitrise.secrets.yml
-    - EXPO_PERSONAL_ACCESS_TOKEN: $EXPO_PERSONAL_ACCESS_TOKEN
+  test_ios_withouth_eas_config_file:
+    before_run:
+    - _clone_sample_project
     steps:
-    - script:
-        inputs:
-        - content: |-
-            #!/bin/env bash
-            set -ex
-            rm -rf ./_tmp
-    - git::https://github.com/bitrise-steplib/bitrise-step-simple-git-clone.git:
-        inputs:
-        - repository_url: $SAMPLE_APP_URL
-        - branch: $SAMPLE_APP_BRANCH
-        - clone_into_dir: ./_tmp
     - script:
         inputs:
         - content: |-
@@ -53,5 +32,19 @@ workflows:
     - path::./:
         inputs:
         - access_token: $EXPO_PERSONAL_ACCESS_TOKEN
-        - platform: android
+        - platform: ios
         - work_dir: ./_tmp
+
+  _clone_sample_project:
+    steps:
+    - script:
+        inputs:
+        - content: |-
+            #!/bin/env bash
+            set -ex
+            rm -rf ./_tmp
+    - git::https://github.com/bitrise-steplib/bitrise-step-simple-git-clone.git:
+        inputs:
+        - repository_url: $SAMPLE_APP_URL
+        - branch: $SAMPLE_APP_BRANCH
+        - clone_into_dir: ./_tmp
