--- a/e2e/bitrise.yml
+++ b/e2e/bitrise.yml
@@ -3,7 +3,7 @@ default_step_lib_source: https://github.com/bitrise-io/bitrise-steplib.git
 
 app:
   envs:
-  - EXPO_PERSONAL_ACCESS_TOKEN: $EXPO_PERSONAL_ACCESS_TOKEN
+  - EXPO_ACCESS_TOKEN: $EXPO_ACCESS_TOKEN
   - SAMPLE_APP_URL: https://github.com/bitrise-io/expo-sample-managed.git
   - SAMPLE_APP_BRANCH: main
 
@@ -14,7 +14,7 @@ workflows:
     steps:
     - path::./:
         inputs:
-        - access_token: $EXPO_PERSONAL_ACCESS_TOKEN
+        - access_token: $EXPO_ACCESS_TOKEN
         - platform: android
         - work_dir: ./_tmp
         - eas_options: --profile=production
@@ -31,7 +31,7 @@ workflows:
             rm ./_tmp/eas.json
     - path::./:
         inputs:
-        - access_token: $EXPO_PERSONAL_ACCESS_TOKEN
+        - access_token: $EXPO_ACCESS_TOKEN
         - platform: ios
         - work_dir: ./_tmp
 
