--- a/step.yml
+++ b/step.yml
@@ -17,6 +17,13 @@ project_type_tags:
 type_tags:
 - build
 
+deps:
+  brew:
+    - name: node
+  apt_get:
+    - name: nodejs
+    - name: npm
+
 toolkit:
   go:
     package_name: github.com/bitrise-steplib/bitrise-step-run-eas-build
